--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   font-family: "IBM Plex Mono", monospace;
 }
 
-h3 {
+h4 {
   margin: 0;
 }
 ul {
@@ -17,10 +17,12 @@ li {
   list-style: circle;
 }
 
-.not_active_title {
+.not_active_title,
+.drive_title {
   text-align: center;
 }
-.not_active_title h2 {
+.not_active_title h2,
+.drive_title h2 {
   margin: 40px 0 20px 0;
 }
 
@@ -30,14 +32,20 @@ li {
 }
 
 .active_true,
-.active_false {
+.active_false,
+.x_less_10,
+.more_10_x_less_20,
+.x_more_20 {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 
 .active_user_card,
-.not_active_user_card {
+.not_active_user_card,
+.driver_less_ten_card,
+.driver_less_twenty_card,
+.driver_more_twenty_card {
   padding: 20px 15px 15px 20px;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.653);
   border-radius: 8px;
@@ -51,9 +59,31 @@ li {
   background-color: rgba(128, 128, 128, 0.462);
 }
 
+.driver_less_ten_card {
+  background-color: #fed0d2;
+}
+.driver_less_twenty_card {
+  background-color: #fde4ce;
+}
+
+.driver_more_twenty_card {
+  background-color: #fcf7cb;
+}
+
+.driver_less_twenty_alert,
+.driver_more_twenty_alert,
+.driver_less_ten_alert {
+  border: 2px solid red;
+  border-radius: 5px;
+  text-align: center;
+}
+
 @media only screen and (min-width: 768px) {
   .active_true,
-  .active_false {
+  .active_false,
+  .x_less_10,
+  .more_10_x_less_20,
+  .x_more_20 {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     padding: 0 20px;
@@ -62,7 +92,10 @@ li {
 
 @media only screen and (min-width: 1024px) {
   .active_true,
-  .active_false {
+  .active_false,
+  .x_less_10,
+  .more_10_x_less_20,
+  .x_more_20 {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
   }
